<resources>
    <string name="app_name" translatable="false">My Application</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_media" translatable="false">MediaActivity</string>
    <string name="name">name</string>
    <string name="music">Musics</string>
    <string name="film">Films</string>
    <string name="anime">Animes</string>
    <string name="excerption">Excerptions</string>
    <string name="languages">Language</string>
    <string name="choose">Choose language</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="insideuri" translatable="false">InsideUri</string>
    <string name="outsideuri" translatable="false">OutsideUri</string>
    <string name="tags">Tags</string>
    <string name="text">Text</string>
    <string name="play">Play</string>
    <string name="action_quit">Log out</string>
    <string name="New">New</string>
    <string name="brouser">Browser</string>
    <string name="chooselang">Choose Theme</string>
    <string name="service">Отключить службы</string>
    <string name="storage">Выберите режим хранения</string>
    <string name="serv">Services</string>
    <string name="gray">Gray</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="image">Image</string>
    <string name="book">Book</string>
    <string name="mix">mixed</string>
    <string name="out">out</string>
    <string name="local">local</string>
    <string name="history">History</string>
    <string name="share" >Share</string>
</resources>
