<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Collections">
        <menu>
            <item
                android:id="@+id/music"
                android:icon="@drawable/muss"
                android:title="@string/music" />
            <item
                android:id="@+id/anime"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/anime" />
            <item
                android:id="@+id/excerption"
                android:icon="@drawable/exer"
                android:title="@string/excerption" />
            <item
                android:id="@+id/film"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/film" />
            <item
                android:id="@+id/image"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/image" />

        </menu>
    </item>

    <item android:title="Application">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/find"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/search" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/New" />
            <item
                android:id="@+id/browser"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/brouser" />
        </menu>
    </item>

</menu>